fix(data-widgets): add missing z-index

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/datagrid-filters.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/datagrid-filters.scss
@@ -99,6 +99,7 @@ $arrow: "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='
     list-style-type: none;
     box-shadow: 0 2px 20px 1px rgba(5, 15, 129, 0.05), 0 2px 16px 0 rgba(33, 43, 54, 0.08);
     overflow: hidden;
+    z-index: 102;
 
     li {
         display: flex;
@@ -131,6 +132,7 @@ $arrow: "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='
     box-shadow: 0 2px 20px 1px rgba(5, 15, 129, 0.05), 0 2px 16px 0 rgba(33, 43, 54, 0.08);
     overflow-x: hidden;
     max-height: 40vh;
+    z-index: 102;
 
     li {
         display: flex;
